--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -53,15 +53,17 @@ msgstr "Ticarət"
 msgid "Золото"
 msgstr "Qızıl"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: bill/templates/state/gov/bills/change_residency.html:42 bill/templates/state/gov/drafts/change_residency.html:21 bill/templates/state/gov/reviewed/change_residency.html:41 factory/models/project.py:148 state/models/treasury.py:85 storage/models/destroy.py:58 storage/models/storage.py:76 storage/models/storage.py:183 storage/models/trade_offer.py:91 storage/models/transport.py:153
 msgctxt "goods"
 msgid "Автоматы"
-msgstr ""
+msgstr "Avtomatlar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: bill/templates/state/gov/bills/change_residency.html:47 bill/templates/state/gov/drafts/change_residency.html:26 bill/templates/state/gov/reviewed/change_residency.html:44 factory/models/project.py:264 state/models/treasury.py:109 storage/models/destroy.py:74 storage/models/storage.py:88 storage/models/storage.py:223 storage/models/trade_offer.py:99
 msgctxt "goods"
 msgid "БПЛА"
-msgstr ""
+msgstr "PUA"
 
 #: bill/templates/state/gov/drafts/start_war.html:22
 msgid "no_border_regions"
@@ -76,75 +78,88 @@ msgctxt "factory"
 msgid "Уровень"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/production_log.py:29 factory/models/production_log.py:48 state/models/treasury.py:38 storage/models/storage.py:38 storage/models/storage.py:112 storage/models/storage.py:234
 msgctxt "goods"
 msgid "Наличные"
-msgstr ""
+msgstr "Nağd pul"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:16 state/models/treasury.py:62 storage/models/destroy.py:38 storage/models/storage.py:59 storage/models/storage.py:148 storage/models/trade_offer.py:82 storage/models/transport.py:123
 msgctxt "goods"
 msgid "Бензин"
-msgstr ""
+msgstr "Benzin"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:39 state/models/treasury.py:68 storage/models/destroy.py:44 storage/models/storage.py:63 storage/models/storage.py:158 storage/models/trade_offer.py:84 storage/models/transport.py:133
 msgctxt "goods"
 msgid "Пластик"
-msgstr ""
+msgstr "Plastik"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:62 storage/models/transport.py:128
 msgctxt "goods"
 msgid "Дизель"
-msgstr ""
+msgstr "Dizel "
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:85 state/models/treasury.py:71 storage/models/destroy.py:46 storage/models/storage.py:65 storage/models/storage.py:162 storage/models/trade_offer.py:85 storage/models/transport.py:137 storage/templates/storage/redesign/storage.html:216
 msgctxt "goods"
 msgid "Сталь"
-msgstr ""
+msgstr "Polad"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:101 state/models/treasury.py:74 storage/models/destroy.py:48 storage/models/storage.py:67 storage/models/storage.py:166 storage/models/trade_offer.py:86 storage/models/transport.py:141 storage/templates/storage/redesign/storage.html:216
 msgctxt "goods"
 msgid "Алюминий"
-msgstr ""
+msgstr "Alüminium "
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:116 state/models/treasury.py:78 storage/models/destroy.py:52 storage/models/storage.py:71 storage/models/storage.py:172 storage/models/trade_offer.py:88 storage/models/transport.py:147
 msgctxt "goods"
 msgid "Медикаменты"
-msgstr ""
+msgstr "Tibbi ləvazimatlar "
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:132 state/models/treasury.py:81 storage/models/destroy.py:54 storage/models/storage.py:72 storage/models/storage.py:177 storage/models/trade_offer.py:89
 msgctxt "goods"
 msgid "Буровые установки"
-msgstr ""
+msgstr "Qazma qurğuları"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:163 state/models/treasury.py:88 storage/models/destroy.py:60 storage/models/storage.py:78 storage/models/storage.py:198 storage/models/trade_offer.py:92 storage/models/transport.py:158
 msgctxt "goods"
 msgid "Танки"
-msgstr ""
+msgstr "Tanklar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:184 state/models/treasury.py:91 storage/models/destroy.py:62 storage/models/storage.py:82 storage/models/storage.py:203 storage/models/trade_offer.py:96 storage/models/transport.py:163
 msgctxt "goods"
 msgid "Штурмовики"
-msgstr ""
+msgstr "Hücum təyyarəsi "
 
 #: factory/models/project.py:200 state/models/treasury.py:97 storage/models/destroy.py:66 storage/models/storage.py:83 storage/models/storage.py:213 storage/models/trade_offer.py:97 storage/models/transport.py:173
 msgctxt "goods"
 msgid "ПЗРК"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:216 state/models/treasury.py:100 storage/models/destroy.py:68 storage/models/storage.py:79 storage/models/storage.py:193 storage/models/trade_offer.py:93
 msgctxt "goods"
 msgid "ПТ-орудия"
-msgstr ""
+msgstr "Tank əleyhinə silahlar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:232 state/models/treasury.py:103 storage/models/destroy.py:70 storage/models/storage.py:86 storage/models/storage.py:188 storage/models/trade_offer.py:94 storage/models/transport.py:183 war/models/squads/infantry.py:50
 msgctxt "goods"
 msgid "Мины"
-msgstr ""
+msgstr "Minalar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: factory/models/project.py:248 state/models/treasury.py:106 storage/models/destroy.py:72 storage/models/storage.py:85 storage/models/storage.py:218 storage/models/trade_offer.py:98 storage/models/transport.py:188
 msgctxt "goods"
 msgid "БМП"
-msgstr ""
+msgstr "Piyada döyüş maşını"
 
 #: factory/templates/factory/redesign/factory.html:13 factory/views/factory.py:64
 msgctxt "factory"
@@ -2002,20 +2017,23 @@ msgstr ""
 msgid "Выдаётся министром"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: state/models/treasury.py:42 storage/models/destroy.py:18 storage/models/storage.py:43 storage/models/storage.py:116 storage/models/trade_offer.py:74 storage/models/transport.py:91
 msgctxt "goods"
 msgid "Уголь"
-msgstr ""
+msgstr "Kömür"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: state/models/treasury.py:45 storage/models/destroy.py:21 storage/models/storage.py:45 storage/models/storage.py:121 storage/models/trade_offer.py:75 storage/models/transport.py:96
 msgctxt "goods"
 msgid "Железо"
-msgstr ""
+msgstr "Dəmir"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: state/models/treasury.py:48 storage/models/destroy.py:24 storage/models/storage.py:47 storage/models/storage.py:126 storage/models/trade_offer.py:76 storage/models/transport.py:101
 msgctxt "goods"
 msgid "Бокситы"
-msgstr ""
+msgstr "Boksitlər"
 
 #: state/models/treasury.py:52 storage/models/destroy.py:28 storage/models/storage.py:51 storage/models/storage.py:132 storage/models/trade_offer.py:78 storage/models/transport.py:107
 msgctxt "goods"
@@ -2032,15 +2050,17 @@ msgctxt "goods"
 msgid "Нефть Urals"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: state/models/treasury.py:65 storage/models/destroy.py:41 storage/models/storage.py:61 storage/models/storage.py:153 storage/models/trade_offer.py:83
 msgctxt "goods"
 msgid "Дизельное топливо"
-msgstr ""
+msgstr "Dizel yanacağı "
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: state/models/treasury.py:94 storage/models/destroy.py:64 storage/models/storage.py:80 storage/models/storage.py:208 storage/models/trade_offer.py:95
 msgctxt "goods"
 msgid "Орбитальные орудия"
-msgstr ""
+msgstr "Orbital silahlar"
 
 #. Last modified by Farid The #Rock, id 1195
 #: state/templates/state/state_view.html:41
@@ -2059,50 +2079,58 @@ msgstr ""
 msgid "Государственные налоги"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:30
 msgctxt "goods"
 msgid "Минералы"
-msgstr ""
+msgstr "Minerallar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:31
 msgctxt "goods"
 msgid "Нефть"
-msgstr ""
+msgstr "Neft"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:32
 msgctxt "goods"
 msgid "Материалы"
-msgstr ""
+msgstr "Materiallar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:33
 msgctxt "goods"
 msgid "Оборудование"
-msgstr ""
+msgstr "Təchizat"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:34
 msgctxt "goods"
 msgid "Оружие"
-msgstr ""
+msgstr "Silah"
 
 #: storage/models/storage.py:109
 msgctxt "storage"
 msgid "Уровень"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:118
 msgctxt "goods"
 msgid "Уголь - лимит"
-msgstr ""
+msgstr "Kömür - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:123
 msgctxt "goods"
 msgid "Железо - лимит"
-msgstr ""
+msgstr "Dəmir - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:128
 msgctxt "goods"
 msgid "Бокситы - лимит"
-msgstr ""
+msgstr "Boksitlər - limit"
 
 #: storage/models/storage.py:134
 msgctxt "goods"
@@ -2119,85 +2147,99 @@ msgctxt "goods"
 msgid "Нефть Urals - лимит"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:150
 msgctxt "goods"
 msgid "Бензин - лимит"
-msgstr ""
+msgstr "Benzin - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:155
 msgctxt "goods"
 msgid "Дизельное топливо - лимит"
-msgstr ""
+msgstr "Dizel yanacağı - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:160
 msgctxt "goods"
 msgid "Пластик - лимит"
-msgstr ""
+msgstr "Plastik - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:164
 msgctxt "goods"
 msgid "Сталь - лимит"
-msgstr ""
+msgstr "Polad - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:168
 msgctxt "goods"
 msgid "Алюминий - лимит"
-msgstr ""
+msgstr "Alüminium - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:174
 msgctxt "goods"
 msgid "Медикаменты - лимит"
-msgstr ""
+msgstr "Tibbi ləvazimatlar - limit"
 
 #: storage/models/storage.py:179
 msgctxt "goods"
 msgid "Буры - лимит"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:185
 msgctxt "goods"
 msgid "Автоматы - лимит"
-msgstr ""
+msgstr "Avtomatlar - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:190
 msgctxt "goods"
 msgid "Мины - лимит"
-msgstr ""
+msgstr "Minalar - kimit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:195
 msgctxt "goods"
 msgid "ПТ-орудия - лимит"
-msgstr ""
+msgstr "Tank əleyhinə silahlar - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:200
 msgctxt "goods"
 msgid "Танки - лимит"
-msgstr ""
+msgstr "Tanklar - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:205
 msgctxt "goods"
 msgid "Штурмовики - лимит"
-msgstr ""
+msgstr "Hücum təyyarəsi - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:210
 msgctxt "goods"
 msgid "Орбитальные орудия - лимит"
-msgstr ""
+msgstr "Orbital silahlar - limit"
 
 #: storage/models/storage.py:215
 msgctxt "goods"
 msgid "ПЗРК - лимит"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:220
 msgctxt "goods"
 msgid "БМП - лимит"
-msgstr ""
+msgstr "Piyada döyüş maşını - limit"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/storage.py:225
 msgctxt "goods"
 msgid "БПЛА - лимит"
-msgstr ""
+msgstr "PUA - limit"
 
 #: storage/models/storage.py:289
 msgid "positive_spend_stock_req"
@@ -2207,25 +2249,29 @@ msgstr ""
 msgid "not_enough"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:86
 msgctxt "goods"
 msgid "Всего кубов"
-msgstr ""
+msgstr "Ümumi kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:93
 msgctxt "goods"
 msgid "Уголь - кубов"
-msgstr ""
+msgstr "Kömür - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:98
 msgctxt "goods"
 msgid "Железо - кубов"
-msgstr ""
+msgstr "Dəmir - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:103
 msgctxt "goods"
 msgid "Бокситы - кубов"
-msgstr ""
+msgstr "Boksitlər - kublar "
 
 #: storage/models/transport.py:109
 msgctxt "goods"
@@ -2242,60 +2288,71 @@ msgctxt "goods"
 msgid "Urals - кубов"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:125
 msgctxt "goods"
 msgid "Бензин - кубов"
-msgstr ""
+msgstr "Benzin - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:130
 msgctxt "goods"
 msgid "Дизель - кубов"
-msgstr ""
+msgstr "Dizel - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:135
 msgctxt "goods"
 msgid "Пластик - кубов"
-msgstr ""
+msgstr "Plastik - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:139
 msgctxt "goods"
 msgid "Сталь - кубов"
-msgstr ""
+msgstr "Polad - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:143
 msgctxt "goods"
 msgid "Алюминий - кубов"
-msgstr ""
+msgstr "Alüminium - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:149
 msgctxt "goods"
 msgid "Медикаменты - кубов"
-msgstr ""
+msgstr "Tibbi ləvazimatlar - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:155
 msgctxt "goods"
 msgid "Автоматы - кубов"
-msgstr ""
+msgstr "Avtomatlar - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:160
 msgctxt "goods"
 msgid "Танки - кубов"
-msgstr ""
+msgstr "Tanklar - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:165
 msgctxt "goods"
 msgid "Штурмовики - кубов"
-msgstr ""
+msgstr "Hücum təyyarəsi - kublar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:168
 msgctxt "goods"
 msgid "Орбиталки"
-msgstr ""
+msgstr "Orbitallar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:170
 msgctxt "goods"
 msgid "Орбиталки - кубов"
-msgstr ""
+msgstr "Orbitallar - kublar"
 
 #: storage/models/transport.py:175
 msgctxt "goods"
@@ -2322,15 +2379,17 @@ msgctxt "goods"
 msgid "БМП - кубов"
 msgstr ""
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:193
 msgctxt "goods"
 msgid "Дроны"
-msgstr ""
+msgstr "Dronlar"
 
+#. Last modified by Mehdi Suleiman, id 1204
 #: storage/models/transport.py:195
 msgctxt "goods"
 msgid "Дроны - кубов"
-msgstr ""
+msgstr "Dronlar - kublar"
 
 #: storage/templates/storage/auctions/auction_info.html:15 storage/templates/storage/auctions/auctions.html:38 storage/templates/storage/trading/trading.html:48
 msgctxt "w_trading"
