--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -1375,15 +1375,17 @@ msgctxt "wallet"
 msgid "Наличные"
 msgstr "Peşin para"
 
+#. Last modified by Alireis28, id 1189
 #: player/templates/player/translate/translate.html:17
 msgctxt "translations"
 msgid "без контекста"
-msgstr "bağlam yok"
+msgstr "Bağlamsız"
 
+#. Last modified by Alireis28, id 1189
 #: player/templates/player/translate/translate.html:51
 msgctxt "translations"
 msgid "Собрать"
-msgstr "Toplamak"
+msgstr "Topla"
 
 #: player/templates/player/translate/translate.html:61
 msgctxt "translations"
@@ -1757,10 +1759,11 @@ msgctxt "mining"
 msgid "Руда"
 msgstr "Maden"
 
+#. Last modified by Alireis28, id 1189
 #: region/templates/region/redesign/mining.html:107
 msgctxt "mining"
 msgid "Качество руды"
-msgstr "Maden kalitesi"
+msgstr "Madenin kalitesi"
 
 #: region/templates/region/redesign/region_info.html:65
 msgctxt "map"
@@ -2778,10 +2781,11 @@ msgctxt "w_trading_new"
 msgid "Новое торговое предложение"
 msgstr "Yeni ticaret teklifi"
 
+#. Last modified by Alireis28, id 1189
 #: storage/templates/storage/redesign/trading/trading.html:205 storage/templates/storage/trading/new_offer.html:43
 msgctxt "w_trading_new"
 msgid "Доступно"
-msgstr "Mevcut"
+msgstr "Kullanılabilir"
 
 #: storage/templates/storage/redesign/trading/trading.html:291 storage/templates/storage/trading/new_offer.html:126
 msgctxt "w_trading_new"
@@ -3339,25 +3343,29 @@ msgctxt "w_trading_new"
 msgid "Недостаточно ресурса для продажи"
 msgstr "Satmak için yeterli kaynak yok"
 
+#. Last modified by Alireis28, id 1189
 #: storage/views/trading/create_offer.py:161
 msgctxt "w_trading_new"
 msgid "Стоимость товара слишком велика"
-msgstr "Ürün fiyatı çok yüksek"
+msgstr "Ürünün fiyatı çok yüksek"
 
+#. Last modified by Alireis28, id 1189
 #: storage/views/trading/create_offer.py:169
 msgctxt "w_trading_new"
 msgid "Недостаточно средств"
-msgstr "Yetersiz bakiye"
+msgstr "Yeterli kaynak yok"
 
+#. Last modified by Alireis28, id 1189
 #: storage/views/trading/create_offer.py:202
 msgctxt "w_trading_new"
 msgid "Указанный Склад вам не принадлежит"
-msgstr "Belirtilen Depo size ait değil"
+msgstr "Bu depo sizin değil"
 
+#. Last modified by Alireis28, id 1189
 #: storage/views/trading/create_offer.py:209
 msgctxt "w_trading_new"
 msgid "Торговое предложение успешно создано"
-msgstr "Takas teklifi başarıyla oluşturuldu"
+msgstr "Ticaret teklifi başarıyla oluşturuldu"
 
 #: storage/views/trading/get_offers.py:39 storage/views/trading/get_offers.py:61 storage/views/trading/get_offers.py:89 storage/views/trading/get_offers.py:206
 msgctxt "w_trading"
