--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -129,10 +129,11 @@ msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "AT-silahları"
 
+#. Last modified by Alireis28, id 1189
 #: factory/models/project.py:232 state/models/treasury.py:103 storage/models/destroy.py:70 storage/models/storage.py:86 storage/models/storage.py:188 storage/models/trade_offer.py:94 storage/models/transport.py:183 war/models/squads/infantry.py:50
 msgctxt "goods"
 msgid "Мины"
-msgstr "Madenler"
+msgstr "Mayınlar"
 
 #: factory/models/project.py:248 state/models/treasury.py:106 storage/models/destroy.py:72 storage/models/storage.py:85 storage/models/storage.py:218 storage/models/trade_offer.py:98 storage/models/transport.py:188
 msgctxt "goods"
@@ -740,20 +741,22 @@ msgctxt "cash_log"
 msgid "Майнинг"
 msgstr "Madencilik"
 
+#. Last modified by Alireis28, id 1189
 #: player/logs/cash_log.py:23
 msgctxt "cash_log"
 msgid "Перелёт"
-msgstr "Uçmak"
+msgstr "Uçuş"
 
 #: player/logs/cash_log.py:24
 msgctxt "cash_log"
 msgid "Новый Склад"
 msgstr "Yeni Depo"
 
+#. Last modified by Alireis28, id 1189
 #: player/logs/cash_log.py:25
 msgctxt "cash_log"
 msgid "Операции со Складом"
-msgstr "Depo ile Yapılan İşlemler"
+msgstr "Depo İşlemleri"
 
 #: player/logs/cash_log.py:26
 msgctxt "cash_log"
@@ -1281,10 +1284,11 @@ msgctxt "profile"
 msgid "место в рейтинге"
 msgstr "değerlendirme yeri"
 
+#. Last modified by Alireis28, id 1189
 #: player/templates/player/redesign/profile.html:191 player/templates/player/redesign/profile.html:205 player/templates/player/redesign/view_profile.html:80 player/templates/player/redesign/view_profile.html:94
 msgctxt "profile"
 msgid "(к рейтингу)"
-msgstr "(en üste)"
+msgstr "(derecelendirmek için)"
 
 #: player/templates/player/redesign/profile.html:197 player/templates/player/redesign/view_profile.html:86
 msgctxt "profile"
@@ -1694,40 +1698,45 @@ msgctxt "mining"
 msgid "Добыча"
 msgstr "Üretme"
 
+#. Last modified by Alireis28, id 1189
 #: region/templates/region/redesign/mining.html:11
 msgctxt "daily_header"
 msgid "Потрать энергию и получи"
-msgstr "Enerji harcayın ve alın"
+msgstr "Enerji harca ve elde et"
 
 #: region/templates/region/redesign/mining.html:12
 msgctxt "daily_header"
 msgid "до"
 msgstr "kadar"
 
+#. Last modified by Alireis28, id 1189
 #: region/templates/region/redesign/mining.html:12
 msgctxt "daily_header"
 msgid "за день!"
-msgstr "günde!"
+msgstr "bir gün içinde!"
 
+#. Last modified by Alireis28, id 1189
 #: region/templates/region/redesign/mining.html:15
 msgctxt "daily_header"
 msgid "энергии потрачено"
-msgstr "harcanan enerji"
+msgstr "harcanmış enerji"
 
+#. Last modified by Alireis28, id 1189
 #: region/templates/region/redesign/mining.html:29
 msgctxt "daily_header"
 msgid "получаем"
-msgstr "almak"
+msgstr "alıyoruz"
 
 #: region/templates/region/redesign/mining.html:30
 msgctxt "daily_header"
 msgid "получить"
 msgstr "almak"
 
+#. Last modified by Alireis28, id 1189
 #: region/templates/region/redesign/mining.html:49
 msgctxt "daily_header"
 msgid "уже получено"
-msgstr "zaten alındı"
+msgstr "alınmış olan"
 
 #: region/templates/region/redesign/mining.html:53 region/templates/region/redesign/region_info.html:20
 msgctxt "mining"
@@ -1944,13 +1953,15 @@ msgstr "Sırada beceri yok"
 msgid "Нет такого навыка"
 msgstr "Yok böyle bir yetenek"
 
+#. Last modified by Alireis28, id 1189
 #: state/models/state.py:36
 msgid "Свободная"
-msgstr "Özgür"
+msgstr "Ücretsiz"
 
+#. Last modified by Alireis28, id 1189
 #: state/models/state.py:37
 msgid "Выдаётся министром"
-msgstr "Bakan tarafından yayınlandı"
+msgstr "Bakan tarafından verilir"
 
 #: state/models/treasury.py:42 storage/models/destroy.py:18 storage/models/storage.py:43 storage/models/storage.py:116 storage/models/trade_offer.py:74 storage/models/transport.py:91
 msgctxt "goods"
@@ -2108,10 +2119,11 @@ msgctxt "goods"
 msgid "Автоматы - лимит"
 msgstr "Tüfekler - limit"
 
+#. Last modified by Alireis28, id 1189
 #: storage/models/storage.py:190
 msgctxt "goods"
 msgid "Мины - лимит"
-msgstr "Madenler - limit"
+msgstr "Mayınlar - limit"
 
 #: storage/models/storage.py:195
 msgctxt "goods"
@@ -2261,10 +2273,11 @@ msgctxt "goods"
 msgid "ПТ-пушка - кубов"
 msgstr "Tanksavar silahı - hacim"
 
+#. Last modified by Alireis28, id 1189
 #: storage/models/transport.py:185
 msgctxt "goods"
 msgid "Мины - кубов"
-msgstr "Madenler - hacim"
+msgstr "Mayınlar - hacim"
 
 #: storage/models/transport.py:190
 msgctxt "goods"
